crates/varyk/tests/snapshots/errors__v0213_map_without_collect.snap
---
source: crates/varyk/tests/errors.rs
expression: stderr
---
error[V0213]: this starts `fetch` and then throws its task away, which stops it
 --> crates/varyk/tests/fixtures/errors/v0213_map_without_collect/main.vr:7:33
  |
7 |     let n = ids.iter().map(|id| fetch(id)).count();
  |                                 ^^^^^^^^^ this starts `fetch` and then throws its task away, which stops it
  |
  = note: wait for it with `.await`, or let it run on its own with `.detach()`
help: insert `.await`
