crates/varyk/tests/snapshots/errors__v0213_started_as_argument.snap
---
source: crates/varyk/tests/errors.rs
expression: stderr
---
error[V0213]: this starts `fetch` and then throws its task away, which stops it
  --> crates/varyk/tests/fixtures/errors/v0213_started_as_argument/main.vr:10:10
   |
10 |     show(fetch(1));
   |          ^^^^^^^^ this starts `fetch` and then throws its task away, which stops it
   |
   = note: wait for it with `.await`, or let it run on its own with `.detach()`
help: insert `.await`
