crates/varyk/tests/snapshots/errors__v0213_started_in_if_branch.snap
---
source: crates/varyk/tests/errors.rs
expression: stderr
---
error[V0213]: this starts `fetch` and then throws its task away, which stops it
 --> crates/varyk/tests/fixtures/errors/v0213_started_in_if_branch/main.vr:7:24
  |
7 |     let n = if fresh { fetch(1) } else { fetch(2).await };
  |                        ^^^^^^^^ this starts `fetch` and then throws its task away, which stops it
  |
  = note: wait for it with `.await`, or let it run on its own with `.detach()`
help: insert `.await`
