crates/varyk/tests/snapshots/errors__v0215_tasks_indexed.snap
---
source: crates/varyk/tests/errors.rs
expression: stderr
---
error[V0215]: `tasks` holds tasks, which can only be given to `Task::all` or `Task::all_settled`
 --> crates/varyk/tests/fixtures/errors/v0215_tasks_indexed/main.vr:7:17
  |
7 |     let first = tasks[0];
  |                 ^^^^^ `tasks` holds tasks, which can only be given to `Task::all` or `Task::all_settled`
  |
  = note: a task stays where it is made: it cannot be stored, passed, returned, or looked inside; only the function that started it waits for it
  = note: wait for all of them with `Task::all(tasks).await` and use what it gives instead
